ENEX FSL/snapshotDownload (1)/objects/ServiceContract.object
<CustomObject><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><externalSharingModel>Private</externalSharingModel><fields><fullName>Cantidad_de_Renovaciones__c</fullName><externalId>false</externalId><label>Cantidad de Renovaciones</label><length>20</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Condiciones_especiales__c</fullName><externalId>false</externalId><label>Condiciones especiales</label><length>150</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Contacto_Frecuente__c</fullName><deleteConstraint>SetNull</deleteConstraint><externalId>false</externalId><label>Contacto Frecuente</label><referenceTo>Contact</referenceTo><relationshipLabel>Contratos de servicio</relationshipLabel><relationshipName>Contratos_de_servicio</relationshipName><required>false</required><trackHistory>false</trackHistory><type>Lookup</type></fields><fields><fullName>Fecha_de_aviso_termino_anticipado__c</fullName><externalId>false</externalId><label>Fecha de aviso termino anticipado</label><required>false</required><trackHistory>false</trackHistory><type>Date</type></fields><fields><fullName>Multa__c</fullName><externalId>false</externalId><label>Multa</label><length>150</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Plazo_de_aviso_anticipado__c</fullName><externalId>false</externalId><label>Plazo de aviso anticipado (dias)</label><length>4</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Procentaje_de_Variaci_n_IPC__c</fullName><externalId>false</externalId><label>Procentaje de Variación IPC</label><precision>18</precision><required>false</required><scale>0</scale><trackHistory>false</trackHistory><type>Percent</type></fields><fields><fullName>Renovaci_n__c</fullName><externalId>false</externalId><label>Renovación</label><length>20</length><required>false</required><trackHistory>false</trackHistory><type>Text</type><unique>false</unique></fields><fields><fullName>Variaci_n_de_IPC__c</fullName><externalId>false</externalId><label>Variación de IPC</label><required>false</required><trackHistory>false</trackHistory><type>Date</type></fields><listViews><fullName>All_ServiceContracts</fullName><columns>CONTRACT.NAME</columns><columns>CONTRACT.APPROVALSTATUS</columns><columns>CONTRACT.STARTDATE</columns><columns>CONTRACT.ENDDATE</columns><columns>CONTRACT.STATUS</columns><filterScope>Everything</filterScope><label>Todos Contratos de servicio</label></listViews><recordTypeTrackHistory>false</recordTypeTrackHistory><recordTypes><fullName>SGME</fullName><active>true</active><label>SGME</label></recordTypes><recordTypes><fullName>SGMM</fullName><active>true</active><label>SGMM</label></recordTypes><sharingModel>Private</sharingModel></CustomObject>